added new change

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- As a heading -->
 <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
-      <span class="navbar-brand mb-0 h1">Splitmate 35%off </span>
+      <span class="navbar-brand mb-0 h1">Splitmate off </span>
     </div>
   </nav>
   <div class="card" style="width: 18rem;">
